<resources>
    <string name="app_name">MyWins</string>
    <string name="action_settings">Settings</string>
    <string name="android">Android</string>
    <string name="title">Title</string>
    <string name="category_description">category</string>
    <string name="dummy_date">27.05.17</string>
    <string name="dummy_title">Title</string>
    <string name="dummy_category">Android</string>
    <string name="importance_description">importance</string>
    <string name="title_activity_success_slider">Success Slider</string>
    <string name="title_activity_edit_success">Edit Success</string>
    <string name="title_activity_importance_popup">Select importance</string>
    <string name="action_date_added">Sort by recent added</string>
    <string name="action_description">Sort by description length</string>
    <string name="action_date_started">Sort by date started</string>
    <string name="action_date_ended">Sort by date ended</string>
    <string name="action_title">Sort by title</string>

    <string name="descr_image">image</string>

    <string name="importance">Sort by importance</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="default_description">Default description</string>
    <string name="edit_date_menu_title">Edit Date</string>
    <string name="remove_date_menu">Remove date</string>
    <string name="remove_item_menu">Remove success</string>
    <string name="remove_image_menu">Remove image</string>

    <string name="importance_huge">Huge</string>
    <string name="importance_big">Big</string>
    <string name="importance_medium">Medium</string>
    <string name="importance_small">Small</string>
    <string name="importance_none">NONE</string>

    <string name="date_started_empty">Start Date</string>
    <string name="date_ended_empty">End Date</string>
    <string name="edit_success_pick_both">Take or pick photo</string>

    <string name="category_media">Media</string>
    <string name="category_sport">Sport</string>
    <string name="category_business">Business</string>
    <string name="category_journey">Journey</string>
    <string name="category_learn">Education</string>
    <string name="category_other">Other</string>
    <string name="category_none">Other</string>

    <string name="error_title">What\'s the name of your success?</string>
    <string name="error_date_ended">You ended before started!</string>
    <string name="not_date_but_text">Date</string>
    <string name="snack_description_todo">Not active!</string>
    <string name="snack_refresh_needed">Successes may not be synced</string>

    <string name="snack_success_not_added">Not Added!</string>
    <string name="snack_success_removed">Success Removed!</string>
    <string name="snack_undo">UNDO</string>
    <string name="snack_image_removed">Image Removed!</string>
    <string name="snack_saved">Saved</string>
    <string name="toast_permission_denied">Access file: permission denied</string>

    <!--TODO check if you can use transition names from Constants-->

    <string name="transition_title">title</string>
    <string name="transition_category_iv">category_iv</string>
    <string name="transition_category">category</string>

    <string name="transition_date_started">dateStarted</string>
    <string name="transition_date_ended">dateEnded</string>
    <string name="transition_importance_iv">importance_iv</string>

    <string name="unexpected_error">Unexpected error</string>
    <string name="success_list_empty">EMPTY :(</string>

    <string name="successes_filters_label">Filters</string>
    <string name="successes_filters_sort_by_label">Sort by</string>
    <string name="successes_filters_sort_by_title_radio_button">Title</string>
    <string name="successes_filters_sort_by_importance_radio_button">Importance</string>
    <string name="successes_filters_sort_by_creation_date_radio_button">Creation date</string>
    <string name="successes_filters_ascending_order_switch">Ascending order</string>
    <string name="successes_filters_importance_label">Importance</string>
    <string name="successes_filters_save_button">Save</string>
    <string name="successes_filters_cancel_button">Cancel</string>

</resources>
