<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shared_element"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <android.support.v7.widget.CardView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/item_card_view"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:clipToPadding="false"
        android:padding="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/item_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="8dp"
                android:gravity="left|center"
                android:textAlignment="textStart"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/item_category_iv"
                app:layout_constraintRight_toLeftOf="@+id/item_date_started"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/dummy_title"/>

            <ImageView
                android:id="@+id/item_category_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/category_description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/item_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/dummy_category"
                android:textAlignment="center"
                android:textColor="@color/secondary_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintLeft_toLeftOf="@+id/item_category_iv"
                app:layout_constraintRight_toRightOf="@+id/item_category_iv"
                app:layout_constraintTop_toBottomOf="@+id/item_category_iv"
                app:layout_constraintVertical_bias="0.0"/>

            <TextView
                android:id="@+id/item_date_ended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:padding="4dp"
                android:text="28.05.17"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_importance_iv"
                />

            <TextView
                android:id="@+id/item_date_started"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/dummy_date"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/item_importance_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/importance_description"
                android:padding="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_date_started"
                app:srcCompat="@drawable/importance_huge"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
